--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hero-provider-app",
-  "version": "0.0.48",
+  "version": "0.0.52",
   "author": "MJSITECHSOLUTIONS",
   "homepage": "https://ionicframework.com/",
   "scripts": {
@@ -21,8 +21,10 @@
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
     "@ionic-native/app-version": "^5.12.0",
+    "@ionic-native/call-number": "^5.15.0",
     "@ionic-native/camera": "^5.0.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/email-composer": "^5.15.0",
     "@ionic-native/file": "^5.0.0",
     "@ionic-native/file-path": "^5.0.0",
     "@ionic-native/http": "^5.10.0",
@@ -34,11 +36,13 @@
     "@ionic/angular": "^4.1.0",
     "@ionic/lab": "^1.0.24",
     "@ionic/storage": "^2.2.0",
-    "cordova-android": "^8.0.0",
+    "call-number": "^1.0.1",
+    "cordova-android": "^8.1.0",
     "cordova-browser": "6.0.0",
     "cordova-plugin-advanced-http": "2.1.1",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-email-composer": "^0.9.2",
     "cordova-plugin-file": "6.0.2",
     "cordova-plugin-filepath": "^1.5.5",
     "cordova-plugin-market": "^1.2.0",
@@ -104,7 +108,11 @@
       "cordova-plugin-file": {},
       "cordova-plugin-filepath": {},
       "cordova-plugin-app-version": {},
-      "cordova-plugin-market": {}
+      "cordova-plugin-market": {},
+      "mx.ferreyra.callnumber": {},
+      "cordova-plugin-email-composer": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      }
     },
     "platforms": [
       "browser",
