--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hero-provider-app",
-  "version": "0.0.53",
+  "name": "hero-partners-app",
+  "version": "1.0.0",
   "author": "MJSITECHSOLUTIONS",
   "homepage": "https://ionicframework.com/",
   "scripts": {
