--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hero-partners-app",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "author": "MJSITECHSOLUTIONS",
   "homepage": "https://ionicframework.com/",
   "scripts": {
@@ -27,10 +27,12 @@
     "@ionic-native/email-composer": "^5.15.0",
     "@ionic-native/file": "^5.0.0",
     "@ionic-native/file-path": "^5.0.0",
+    "@ionic-native/firebase": "^5.0.0-beta.14",
     "@ionic-native/http": "^5.10.0",
     "@ionic-native/ionic-webview": "^5.0.0",
     "@ionic-native/market": "^5.12.0",
     "@ionic-native/native-storage": "^5.7.0",
+    "@ionic-native/onesignal": "^5.15.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
@@ -52,6 +54,7 @@
     "google-libphonenumber": "^3.2.3",
     "ionic-selectable": "^4.4.0",
     "ngx-order-pipe": "^2.0.3",
+    "onesignal-cordova-plugin": "^2.6.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.29"
@@ -112,7 +115,8 @@
       "mx.ferreyra.callnumber": {},
       "cordova-plugin-email-composer": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      }
+      },
+      "onesignal-cordova-plugin": {}
     },
     "platforms": [
       "browser",
