--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hero-partners-app",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "author": "MJSITECHSOLUTIONS",
   "homepage": "https://ionicframework.com/",
   "scripts": {
@@ -20,22 +20,22 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
-    "@ionic-native/app-version": "^5.12.0",
-    "@ionic-native/call-number": "^5.15.0",
-    "@ionic-native/camera": "^5.0.0",
-    "@ionic-native/core": "^5.0.0",
-    "@ionic-native/email-composer": "^5.15.0",
-    "@ionic-native/file": "^5.0.0",
-    "@ionic-native/file-path": "^5.0.0",
-    "@ionic-native/firebase": "^5.0.0-beta.14",
-    "@ionic-native/http": "^5.10.0",
-    "@ionic-native/ionic-webview": "^5.0.0",
-    "@ionic-native/market": "^5.12.0",
-    "@ionic-native/native-storage": "^5.7.0",
-    "@ionic-native/onesignal": "^5.15.1",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^4.1.0",
+    "@ionic-native/app-version": "^5.16.0",
+    "@ionic-native/call-number": "^5.16.0",
+    "@ionic-native/camera": "^5.16.0",
+    "@ionic-native/core": "^5.16.0",
+    "@ionic-native/email-composer": "^5.16.0",
+    "@ionic-native/file": "^5.16.0",
+    "@ionic-native/file-path": "^5.16.0",
+    "@ionic-native/firebase": "^5.16.0",
+    "@ionic-native/http": "^5.16.0",
+    "@ionic-native/ionic-webview": "^5.16.0",
+    "@ionic-native/market": "^5.16.0",
+    "@ionic-native/native-storage": "^5.16.0",
+    "@ionic-native/onesignal": "^5.16.0",
+    "@ionic-native/splash-screen": "^5.16.0",
+    "@ionic-native/status-bar": "^5.16.0",
+    "@ionic/angular": "^4.11.3",
     "@ionic/lab": "^1.0.24",
     "@ionic/storage": "^2.2.0",
     "call-number": "^1.0.1",
@@ -46,17 +46,17 @@
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-email-composer": "^0.9.2",
     "cordova-plugin-file": "6.0.2",
-    "cordova-plugin-filepath": "^1.5.5",
+    "cordova-plugin-filepath": "^1.5.6",
     "cordova-plugin-market": "^1.2.0",
     "cordova-plugin-nativestorage": "2.3.2",
     "cordova-sqlite-storage": "3.2.0",
-    "core-js": "^2.5.4",
-    "google-libphonenumber": "^3.2.3",
-    "ionic-selectable": "^4.4.0",
-    "ngx-order-pipe": "^2.0.3",
-    "onesignal-cordova-plugin": "^2.6.0",
-    "rxjs": "~6.5.1",
-    "tslib": "^1.9.0",
+    "core-js": "^2.6.10",
+    "google-libphonenumber": "^3.2.6",
+    "ionic-selectable": "^4.4.1",
+    "ngx-order-pipe": "^2.0.4",
+    "onesignal-cordova-plugin": "^2.7.0",
+    "rxjs": "^6.5.3",
+    "tslib": "^1.10.0",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
@@ -70,20 +70,20 @@
     "@angular/language-service": "~7.2.2",
     "@ionic/angular-toolkit": "~1.5.1",
     "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~12.0.0",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^12.0.12",
     "codelyzer": "~4.5.0",
-    "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^4.0.1",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^4.1.3",
+    "cordova-plugin-splashscreen": "^5.0.3",
+    "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-whitelist": "^1.3.4",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
