--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hero-partners-app",
-  "version": "1.0.7",
+  "version": "1.0.9",
   "author": "MJSITECHSOLUTIONS",
   "homepage": "https://ionicframework.com/",
   "scripts": {
@@ -28,6 +28,7 @@
     "@ionic-native/file": "^5.16.0",
     "@ionic-native/file-path": "^5.16.0",
     "@ionic-native/firebase": "^5.16.0",
+    "@ionic-native/geolocation": "^5.16.0",
     "@ionic-native/http": "^5.16.0",
     "@ionic-native/ionic-webview": "^5.16.0",
     "@ionic-native/market": "^5.16.0",
@@ -47,6 +48,7 @@
     "cordova-plugin-email-composer": "^0.9.2",
     "cordova-plugin-file": "6.0.2",
     "cordova-plugin-filepath": "^1.5.6",
+    "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-market": "^1.2.0",
     "cordova-plugin-nativestorage": "2.3.2",
     "cordova-sqlite-storage": "3.2.0",
@@ -116,7 +118,8 @@
       "cordova-plugin-email-composer": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
-      "onesignal-cordova-plugin": {}
+      "onesignal-cordova-plugin": {},
+      "cordova-plugin-geolocation": {}
     },
     "platforms": [
       "browser",
